# elso

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  environment.yml
.github/workflows/: build.yml  docs.yml
src/bindings/: CMakeLists.txt  elso_bindings.cpp
src/cpp/physics/: CMakeLists.txt  models.hpp  solver.cpp  solver.hpp
src/cpp/utils/: CMakeLists.txt  calculators.cpp  calculators.hpp  definitions.hpp  includes.hpp  math.hpp  types.cpp  types.hpp
src/python/: main.py
src/python/elso/: __init__.py  parsers.py
tests/cpp/: CMakeLists.txt  test_assets.cpp  test_calculators.cpp
tests/python/: elso_testing.py  test_bindings.py  test_solver.py
tests/python/test_parsers/: rates_data.yml  stock_data.yml
